public/css/main.css
/* ... */
.filter h4.open, .sub-nav > h4.open {
    background: url('../img/down-arrow.png') #f9f9f9 no-repeat 95% 50%;
    border-bottom: none;
}

.filter > fieldset, .sub-nav .filter > h5, .sub-nav > h5, .sub-nav h2, .archive {
    display: none;
}

/* * * * * * * * * * * * * * * * * * * * *
        CONTENT
* * * * * * * * * * * * * * * * * * * * * */
#featured {
    background: #fffcd0;
}
.featured {
    padding: 3%;
}

ul.tags {
    margin-top: 0;
}

#featured ul.tags {
    margin-top: .5em;
    padding-right: 3%;
}

#featured h3 {
    padding-right: 3%;
}

#featured p {
    font-size: 1.05em;
    margin-bottom: 0;
    padding-right: 3%;
}

h3.contributor {
    margin-bottom: 0;
}
.byline, .profession, .hometown, .my-web-site, .event {
    font-family: Arial, sans-serif;
    font-size: .924em;
}
.timestamp {
    float:right;
}

p.author-links {
  float: right;
  margin-top: 0;
}

br.author-links {
  clear: both;
}

main {
    padding: 0 1em;
}
.posts > li:not(:last-of-type) {
    border-bottom: 1px solid #DAE4F4;
    margin-bottom: 1em;
}

.post .image-wrapper p, .posts .image-wrapper p, #featured .image-wrapper p {
	color: #666;
	font-family: 'Arial', Arial, sans-serif;
	font-size: .5em;
}

/* Disabled for time being
.overlay {
	background-position: 50% 50%;
    display: block;
    height: 146px;
    position: absolute;
    width: 201px;
}
.overlay.video {
    background-image: url('../img/media-overlay-01.png');
}
.overlay.audio {
    background-image: url('../img/media-overlay-02.png');
}
.overlay.upload, .overlay.document {
    background-image: url('../img/media-overlay-03.png');
}
*/

main.single {
    padding-bottom: 1em;
}
main.single > .post > h3 {
    font-size: 1.185em;
}
main.single > .post > h3.my-content {
    font-size: 1em;
}
.single iframe {
    width: 100%;
}
.help {
    border-bottom: 1px solid #C8D4E9;
    color: #676158;
    font-family: Arial, sans-serif;
    margin-bottom: 1em;
}

.help p {
    text-align: justify;
}

.message {
	border-bottom: 1px solid #C8D4E9;
	font-family: Arial, sans-serif;
    padding: 1em 0;
}

.message p {
    margin: 0;
}

.coming-soon {
    border-bottom: 1px solid #C8D4E9;
    color: #000;
    font-family: Arial, sans-serif;
    font-size: 1.5em;
    font-weight: bold;
    padding: .5em 0 1em 0;
    text-align: center;
    text-transform: uppercase;
}
.attachments {
    border-bottom: 1px solid #C8D4E9;
    border-top: 1px solid #C8D4E9;
    padding: 1em 0;
}
.download a {
    background: url('../img/pdf-icon.png') 50% 0 scroll no-repeat;
}
.download:hover {
    cursor: pointer;
}
.download a, .video-link a {
    color: #333;
    display: block;
    padding-top: 4em;
    text-align: center;
}
.download a > span {
    display: none;
    font-size: .8em;
    text-transform: uppercase;
}
.download, .video-link {
    cursor: pointer;
    display: inline-block;
    vertical-align: top;
    width: 25%;
}

.video-link a {
    background: url('../img/video.png') 50% 0 scroll no-repeat;
    padding-left: .5em;
}

.whats-new {
	padding: 0 3%;
}

#comments {
    background: #f9f9f9;
    margin-bottom: 1em;
    padding: 0 20px;
}

.whats-new aside > h2 {
    border-bottom: none;
    margin: 0;
    padding: 0 1em .1em;
}


#comments li > p {
    font-size: .9em;
    margin: .5em 0;
}
#comments li > .user {
    text-align: right;
    display: block;
    margin-bottom: 1em;
}
ul.tags > li {
    display: inline-block;
    font-size: .8em;
    text-transform: uppercase;
}
#support, .notices-box, .filter {
    padding: 0 3%;
}
.filter ul {
    display: none;
    font-size: .9em;
}
.filter ul > li {
    border: 1px solid #d2def4;
    border-top: none;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0 0 0 .75em;
}

.filter ul > li:last-of-type {
    margin-bottom: .5em;
}

.filter fieldset > h5 {
    cursor: pointer;
}
.filter input[type="checkbox"] {
	float: left;
	margin: 1em .5em 0 0;
}

.date-divider {
    background-color: #e5e5cd;
    border-bottom: 0px solid #cac9ad;
    border-top: 0px solid #cac9ad;
    padding: .25em 3%;
}
.date-divider span {
    float: right;
}

a.comment-box {
    border: 1px solid #ccc;
    border-radius: 2px;
    color: #333;
    display: block;
    font-family: Arial, sans-serif;
    font-size: 1.1em;
    font-weight: bold;
    margin: .5em 0;
    padding:  .75em .75em .55em;
}
a.comment-box:hover {
    background: #f9f9f9;
}

.notices-box {
	margin-bottom: 1em;
    text-align: center;
}
.notices-box > h2 {
    text-align: left;
}
.date-divider {
    background-color: #e5e5cd;
    border-bottom: 0px solid #cac9ad;
    border-top: 0px solid #cac9ad;
    font-family: Georgia, Times, serif;
    font-weight: bold;
    margin-bottom: 1em;
    padding: .5em 3%;
}

.revenue-opportunity {
	background-color: #e8e9f3;
	height: 100px;
	margin: 0 auto;
	padding-top: 50px;
	text-align: center;
}

input[type="checkbox"] {
    margin-right: .5em;
}
label.check {
    font-family: Arial, sans-serif;
    font-size: 0.9em;
}
.field {
/*     padding: .5em 0; */
}

.field.document, .field.document + a {
    display: inline-block;
    margin-top: .5em;
}

.field.account-profile {
    margin-bottom: 1em;
}

.field .redactor-box {
    margin-bottom: 0;
}

.image-field-wrapper {
	display: inline-block;
}
img.display-image {
	float: left;
	margin: 0 15px 15px 0;
}
.event .field.date, .field.statezip {
    display: inline-block;
    width: 48%;
    padding-right: .5em;
}
a.optional-category-field {
    float:right;
}
.legal {
    font-family: Arial, sans-serif;
    font-size: .9em;
}
.inputs label,
.field label {
	display: block;
    font-weight: bold;
}
.buttons {
    text-align: center;
}
.sidebar {
    margin: 0 2em;
}

.event-venue {
    font-family: Arial, sans-serif;
    font-weight: bold;
    color: #A52A2A;
}

.notices .event {
    margin-top: 0;
    margin-bottom: 0;
}

.notices .byline {
    margin-top: 1em;
}

.notices .byline, .notices .posts .byline {
    margin-bottom: 1em;
}
/* ... */

